--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: ExplodingSheep
-main: com.github.adut.ExplodingSheep
+main: com.github.adut.ExplodingSheep.ExplodingSheep
 version: 1.0
 author: adutude
 description: Your sheep will explode
