Added xscolor and xsexp parameters to config file and also allow setting from console w/ commands, added config file.

--- a/plugin.yml
+++ b/plugin.yml
@@ -3,3 +3,8 @@ main: com.github.adut.ExplodingSheep.ExplodingSheep
 version: 1.0
 author: adutude
 description: Your sheep will explode
+commands:
+    xsexp:
+        description: Change the explosion strength
+    xscolor:
+        description: Color of wool that will explode
